# AdventOfCode-2k22

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ezmode.sh  santa.sh
Day1/: CmakeLists.txt  input.txt  main.cpp
Day2/: CMakeLists.txt  main.cpp
Day2/part1/: CMakeLists.txt  main.cpp
Day2/part2/: CMakeLists.txt  main.cpp
Day3/: CMakeLists.txt  main.cpp
Day4/: CMakeLists.txt  main.cpp
Day5/: main.cpp
Day6/: main.cpp
Day7/: main.cpp
Day8/: main.cpp
utils/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  Logger.h
